Fix Gallery title spacing to match other pages

--- a/app/assets/stylesheets/gallery.scss
+++ b/app/assets/stylesheets/gallery.scss
@@ -1,10 +1,6 @@
 @import "variables";
 
 .gallery-page {
-  h1 {
-    margin-top: 0;
-  }
-
   &__filters {
     display: flex;
     flex-wrap: wrap;
